added symfony/var-dumper for prettier var dump with dd()

--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "require": {
     "php": ">=5.6",
-    "illuminate/support": "5.3.*"
+    "illuminate/support": "5.3.*",
+    "symfony/var-dumper": "^3.1"
   },
   "scripts": {
     "post-root-package-install": [
